--- a/Django Web Framework/DjangoSites.Html
+++ b/Django Web Framework/DjangoSites.Html
@@ -3,35 +3,47 @@
 <html>
     <head>
         <title>Django Web Framework</title>
-        <!--<link href="css/styles.css" rel="stylesheet" /> -->
+        <link href="css/styles.css" rel="stylesheet" /> 
     </head>
     <body>
-        <section>
+    <content>
+        <div class="content">
             <p>
-            Sites implemented using Django
+            <h3 class="center"> Sites implemented using Django </h3>
             </p>
             <table>
                 <tr>
-                    <td> Pinterest </td>
-                    <td> Instagram</td>
-                    <td> Mozilla </td>
+                    <td> Pinterest  <br>
+                        <img src="css/img/pinterest.jpeg">
+                    </td>
+                    <td> Instagram <br>
+                        <img src="css/img/instagram.jpeg"></td>
+                    <td> Mozilla <br>
+                        <img src="css/img/mozilla.jpeg"> </td>
 
 
                  </tr>
                  <tr>
-                    <td> Washington Times </td>
-                    <td> PBS </td>
-                    <td> Disqus </td>
+                    <td> Washington Times <br>
+                        <img src="css/img/wt.jpeg"> </td>
+                    <td> PBS <br>
+                        <img src="css/img/pbs.jpeg"> </td>
+                    <td> Disqus <br>
+                        <img src="css/img/disqus.jpeg"> </td>
 
 
                  </tr>
                  <tr>
-                    <td> OpenStack </td>
-                    <td> PolitiFact </td>
-                    <td> IconFinder </td>
+                    <td> OpenStack <br>
+                        <img src="css/img/openstack.jpeg"></td>
+                    <td> PolitiFact <br>
+                        <img src="css/img/politifact.jpeg"></td>
+                    <td> IconFinder <br>
+                        <img src="css/img/icon.jpeg"></td>
                  </tr>
 
             </table>
+            </div>
         </section>
     </body>
 </html>
