--- a/Django Web Framework/DjangoSites.Html
+++ b/Django Web Framework/DjangoSites.Html
@@ -7,39 +7,52 @@
     </head>
     <body>
     <content>
-        <div class="content">
-            <p>
-            <h3 class="center"> Sites implemented using Django </h3>
+        <p>
+            <h1 class="center"> Sites implemented using Django </h1>
             </p>
+
+        <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a> </li> |
+                        <li><a href = "DjangoSites.Html">Sample Sites</a> </li> 
+                    </ul>
+         </nav>
+        <div class="content">
+            
             <table>
                 <tr>
-                    <td> Pinterest  <br>
+                    <td><a class ="specialLink" href="http://www.pinterest.com"> Pinterest  <br>
                         <img src="css/img/pinterest.jpeg">
+                        </a>
                     </td>
-                    <td> Instagram <br>
+                    <td> <a class ="specialLink"  href="Http://www.instagram.com"> Instagram <br>
                         <img src="css/img/instagram.jpeg"></td>
-                    <td> Mozilla <br>
+                        </a>
+                    <td><a class ="specialLink"  href="http://www.mozilla.com"> Mozilla <br>
                         <img src="css/img/mozilla.jpeg"> </td>
-
-
+                        </a>
                  </tr>
                  <tr>
-                    <td> Washington Times <br>
+                    <td><a class ="specialLink"  href="http://www.washingtontimes.com"> Washington Times <br>
                         <img src="css/img/wt.jpeg"> </td>
-                    <td> PBS <br>
+                        </a>
+                    <td><a class ="specialLink"  href="http://www.pbs.com"> PBS <br>
                         <img src="css/img/pbs.jpeg"> </td>
-                    <td> Disqus <br>
+                        </a>
+                    <td><a class ="specialLink"  href="http://www.disqus.com"> Disqus <br>
                         <img src="css/img/disqus.jpeg"> </td>
-
-
+                        </a>
                  </tr>
                  <tr>
-                    <td> OpenStack <br>
+                    <td><a class ="specialLink"  href="http://www.Openstack.com"> OpenStack <br>
                         <img src="css/img/openstack.jpeg"></td>
-                    <td> PolitiFact <br>
+                        </a>
+                    <td> <a class ="specialLink"  href="http://www.politifact.com"> PolitiFact <br>
                         <img src="css/img/politifact.jpeg"></td>
-                    <td> IconFinder <br>
+                        </a>
+                    <td> <a class ="specialLink"  href="http://www.IconFinder.com"> IconFinder <br>
                         <img src="css/img/icon.jpeg"></td>
+                        </a>
                  </tr>
 
             </table>
