--- a/Django Web Framework/index.html
+++ b/Django Web Framework/index.html
@@ -4,14 +4,12 @@
     <head>
         <title>Django Web Framework</title>
         <link href="css/styles.css" rel="stylesheet" /> 
+        <!-- <script type="text/javascript" src="js/popup.js" ></script> -->
+        <script type="text/javascript" src="js/injection.js" ></script>
     </head>
     <body>
         <h1 class="center"> Django </h1>
-         <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a> </li> |
-                        <li><a href = "DjangoSites.Html">Sample Sites</a> </li> 
-                    </ul>
+         <nav id ="header">
          </nav>
         <div class="content">
             <section>
@@ -79,6 +77,8 @@
     
                     </div>
             </section>
-        </div>
+            <footer id = "footer"> 
+        
+        </footer>
     </body>
 </html>
