--- a/Django Web Framework/index.html
+++ b/Django Web Framework/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Django Web Framework</title>
         <link href="css/styles.css" rel="stylesheet" /> 
-        <!-- <script type="text/javascript" src="js/popup.js" ></script> -->
+        <script type="text/javascript" src="js/popup.js" ></script>
         <script type="text/javascript" src="js/injection.js" ></script>
     </head>
     <body>
