--- a/Django Web Framework/DjangoSites.Html
+++ b/Django Web Framework/DjangoSites.Html
@@ -4,8 +4,17 @@
     <head>
         <title>Django Web Framework</title>
         <link href="css/styles.css" rel="stylesheet" /> 
-         <script type="text/javascript" src="js/popup.js" ></script>
+         <!--<script type="text/javascript" src="js/popup.js" ></script>-->
          <script type="text/javascript" src="js/injection.js" ></script>
+         <script type="text/javascript" src="js/jQueryFun.js" ></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+        <script>
+            $(function() {
+                runJQ();
+            });
+        </script>
     </head>
     <body>
     <content>
@@ -21,36 +30,36 @@
             <table>
                 <tr>
                     <td><a class ="specialLink" href="http://www.pinterest.com"> Pinterest  <br>
-                        <img src="css/img/pinterest.jpeg">
+                        <img src="css/img/pinterest.jpeg" class ="pic">
                         </a>
                     </td>
                     <td> <a class ="specialLink"  href="Http://www.instagram.com"> Instagram <br>
-                        <img src="css/img/instagram.jpeg"></td>
+                        <img src="css/img/instagram.jpeg" class ="pic"></td>
                         </a>
                     <td><a class ="specialLink"  href="http://www.mozilla.com"> Mozilla <br>
-                        <img src="css/img/mozilla.jpeg"> </td>
+                        <img src="css/img/mozilla.jpeg" class ="pic"> </td>
                         </a>
                  </tr>
                  <tr>
                     <td><a class ="specialLink"  href="http://www.washingtontimes.com"> Washington Times <br>
-                        <img src="css/img/wt.jpeg"> </td>
+                        <img src="css/img/wt.jpeg" class ="pic"> </td>
                         </a>
                     <td><a class ="specialLink"  href="http://www.pbs.com"> PBS <br>
-                        <img src="css/img/pbs.jpeg"> </td>
+                        <img src="css/img/pbs.jpeg" class ="pic"> </td>
                         </a>
                     <td><a class ="specialLink"  href="http://www.disqus.com"> Disqus <br>
-                        <img src="css/img/disqus.jpeg"> </td>
+                        <img src="css/img/disqus.jpeg" class ="pic"> </td>
                         </a>
                  </tr>
                  <tr>
                     <td><a class ="specialLink"  href="http://www.Openstack.com"> OpenStack <br>
-                        <img src="css/img/openstack.jpeg"></td>
+                        <img src="css/img/openstack.jpeg" class ="pic"></td>
                         </a>
                     <td> <a class ="specialLink"  href="http://www.politifact.com"> PolitiFact <br>
-                        <img src="css/img/politifact.jpeg"></td>
+                        <img src="css/img/politifact.jpeg" class ="pic"></td>
                         </a>
                     <td> <a class ="specialLink"  href="http://www.IconFinder.com"> IconFinder <br>
-                        <img src="css/img/icon.jpeg"></td>
+                        <img src="css/img/icon.jpeg" class ="pic"></td>
                         </a>
                  </tr>
 
